design: Resolve footer and navbar alignment issues

--- a/front/components/navbar/navbar.module.css
+++ b/front/components/navbar/navbar.module.css
@@ -8,6 +8,6 @@
 .li {
   list-style: none;
   display: inline-block;
-  padding: 20px 20px;
+  padding: 20px 20px 10px 30px;
 }
 
